# docs/swagger.json
@@ -1155,7 +1155,8 @@
         "dto.CreateCategoryRequest": {
             "type": "object",
             "required": [
-                "name"
+                "name",
+                "type"
             ],
             "properties": {
                 "description": {
@@ -1168,6 +1169,14 @@
                     "maxLength": 50,
                     "minLength": 1,
                     "example": "Food"
+                },
+                "type": {
+                    "type": "string",
+                    "enum": [
+                        "INCOME",
+                        "EXPENSE"
+                    ],
+                    "example": "EXPENSE"
                 }
             }
         },
@@ -1399,6 +1408,9 @@
                 "name": {
                     "type": "string"
                 },
+                "type": {
+                    "$ref": "#/definitions/model.CategoryType"
+                },
                 "updatedAt": {
                     "type": "string"
                 },
@@ -1409,6 +1421,17 @@
                     "type": "string"
                 }
             }
+        },
+        "model.CategoryType": {
+            "type": "string",
+            "enum": [
+                "INCOME",
+                "EXPENSE"
+            ],
+            "x-enum-varnames": [
+                "CategoryTypeIncome",
+                "CategoryTypeExpense"
+            ]
         },
         "model.Cost": {
             "type": "object",
