# internal/model/category.go
@@ -7,14 +7,22 @@ import (
 	"gorm.io/gorm"
 )
 
+type CategoryType string
+
+const (
+	CategoryTypeIncome  CategoryType = "INCOME"
+	CategoryTypeExpense CategoryType = "EXPENSE"
+)
+
 type Category struct {
-	ID          uuid.UUID `gorm:"type:uuid;primaryKey" json:"id"`
-	UserID      uuid.UUID `gorm:"type:uuid;not null;index" json:"userId"`
-	Name        string    `gorm:"type:varchar(50);not null;index:idx_user_category_name,unique" json:"name"`
-	Description *string   `gorm:"type:text" json:"description,omitempty"`
-	CreatedAt   time.Time `gorm:"default:CURRENT_TIMESTAMP" json:"createdAt"`
-	UpdatedAt   time.Time `gorm:"default:CURRENT_TIMESTAMP" json:"updatedAt"`
-	DeletedAt   DeletedAt `gorm:"index" json:"deletedAt,omitempty" swaggertype:"string"`
+	ID          uuid.UUID    `gorm:"type:uuid;primaryKey" json:"id"`
+	UserID      uuid.UUID    `gorm:"type:uuid;not null;index" json:"userId"`
+	Name        string       `gorm:"type:varchar(50);not null;index:idx_user_category_name,unique" json:"name"`
+	Type        CategoryType `gorm:"type:varchar(10);not null;default:'EXPENSE';check:type IN ('INCOME', 'EXPENSE')" json:"type"`
+	Description *string      `gorm:"type:text" json:"description,omitempty"`
+	CreatedAt   time.Time    `gorm:"default:CURRENT_TIMESTAMP" json:"createdAt"`
+	UpdatedAt   time.Time    `gorm:"default:CURRENT_TIMESTAMP" json:"updatedAt"`
+	DeletedAt   DeletedAt    `gorm:"index" json:"deletedAt,omitempty" swaggertype:"string"`
 
 	User *User `gorm:"foreignKey:UserID;constraint:OnUpdate:CASCADE,OnDelete:CASCADE"`
 }
